-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11-shenandoah, 14
-
Component/s: hotspot
-
b11
-
x86
-
generic
Nightlies show failures in CAS/CAE related jcstress tests, and they only seem to affect float/double variants.
The root cause isJDK-8228369 which removed save_vector_registers()/restore_vector_registers() around the LRB runtime call. It turns out that we actually need them, because the LRB stub is used by C1/C2 CAS intrinsics.
The root cause is
- relates to
-
JDK-8228369 Shenandoah: Refactor LRB C1 stubs
-
- Resolved
-