8229977: Shenandoah: save/restore FPU state aroud LRB runtime call

Reviewed-by: shade